src/main/grammars/Racket.bnf
{
  parserClass="org.racket.lang.core.parser.RacketParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="Racket"
  psiImplClassSuffix="Impl"
  psiPackage="org.racket.lang.core.psi"
  psiImplPackage="org.racket.lang.core.psi.impl"

  elementTypeHolderClass="org.racket.lang.core.parser.psi.RacketTypes"
  elementTypeClass="org.racket.lang.core.parser.psi.RacketElementType"
  tokenTypeClass="org.racket.lang.core.parser.psi.RacketTokenType"

  psiImplUtilClass="org.racket.lang.core.parser.psi.impl.RacketPsiImplUtil"
}


RacketFile ::= HASH_LANG Item*

Item ::= (Form | COMMENT | SEXP_COMMENT | CRLF)

Form ::= Datum
       | DOT
       | CHARACTER
       | NUMBER
       | BOOLEAN
       | STRING
       | IDENTIFIER
       | KEYWORD
       | OPEN_PAREN Item* CLOSE_PAREN
       | OPEN_SQUARE Item* CLOSE_SQUARE
       // | OPEN_BRACE Item* CLOSE_BRACE

Datum ::= CONSTANT Form
        | UNQUOTE Form
